update to sb4 j25